[package]
name = "yaml-merge"
version = "0.1.0"
authors = ["Paul Ollivier <contact@paulollivier.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ym"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"

[dependencies.yaml-rust]
git = "https://github.com/chyh1990/yaml-rust.git"